src/objects/VPM_WithholdingTaxType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>VPM : This list contains withholding Tax Type values</description>
    <fields>
        <fullName>VPM_APIName__c</fullName>
        <description>VPM : API name</description>
        <label>VPM_APIName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_Country__c</fullName>
        <description>VPM : Country code</description>
        <label>VPM_Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ECC__c</fullName>
        <description>VPM : ECC</description>
        <label>VPM_ECC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_WithholdingTaxType__c</fullName>
        <description>VPM : Picklist Values</description>
        <label>VPM_WithholdingTaxType</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>VPM_WithholdingTaxType</label>
</CustomObject>